<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textConversion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/text_conversion"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:checkedButton="@id/MtoK"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textConversion">

        <RadioButton
            android:id="@+id/MtoK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="radioClicked"
            android:text="@string/button_MtoK"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/KtoM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="radioClicked"
            android:text="@string/button_KtoM"
            android:textSize="18sp" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonConvert"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:onClick="buttonConvertClicked"
        android:text="@string/button_convert"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputText" />

    <TextView
        android:id="@+id/inputUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_milesValue"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/inputText"
        app:layout_constraintStart_toStartOf="@+id/textConversion"
        app:layout_constraintTop_toTopOf="@+id/inputText" />

    <TextView
        android:id="@+id/outputUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_kilometersValue"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/outputText"
        app:layout_constraintStart_toStartOf="@+id/inputUnit"
        app:layout_constraintTop_toTopOf="@+id/outputText" />

    <TextView
        android:id="@+id/outputText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@color/secondaryDarkColor"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        app:firstBaselineToTopHeight="10dp"
        app:layout_constraintEnd_toEndOf="@+id/inputText"
        app:layout_constraintStart_toStartOf="@+id/inputText"
        app:layout_constraintTop_toBottomOf="@+id/buttonConvert" />

    <TextView
        android:id="@+id/textConvertHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/text_conversionHistory"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/outputUnit"
        app:layout_constraintTop_toBottomOf="@+id/outputText" />

    <TextView
        android:id="@+id/convertHistory"
        android:layout_width="0dp"
        android:layout_height="168dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@color/secondaryDarkColor"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textConvertHistory" />

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:onClick="clearButtonClicked"
        android:text="@string/button_clear"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/convertHistory" />

    <EditText
        android:id="@+id/inputText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@color/secondaryDarkColor"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="numberSigned|number|numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textConversion"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>